# github-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/github_mcp/: github_client.py  server.py
