[project]
name = "github-mcp"
version = "0.1.0"
description = "A GitHub Assistant MCP server — browse repos, issues, and PRs with Claude"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
# This creates a `github-mcp` CLI command when the package is installed.
# Claude Desktop uses this to launch the server: `github-mcp` → calls main()
github-mcp = "github_mcp.server:main"

[tool.uv]
# Tell uv where to find the package source code
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp"]
